--- a/index.html
+++ b/index.html
@@ -21,15 +21,11 @@
     <!-- Inline CSS-->
     <h1 style="background-color: beige">This is heading tag</h1>
 
-    <p class="paragraph-rule span-rule ">Bordered paragraph</p>
+    <p class="paragraph-rule span-rule">Bordered paragraph</p>
 
     <h2>display: Inline</h2>
     <div>
-      Lorem, ipsum dolor <span class="span-rule"> sit</span> amet consectetur adipisicing elit. Magni rem
-      accusantium <span class="span-rule"> eos </span> beatae tempore, esse repudiandae distinctio provident
-      iure, dicta laborum libero harum numquam quidem inventore itaque ea a non.
-        
-        
+    <p>Github Commit</p> 
     </div>
   </body>
 </html>
